WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136982
Web Inspector: fix TypeSet hierarchy in TypeTokenView
https://bugs.webkit.org/show_bug.cgi?id=136982
Summary
Web Inspector: fix TypeSet hierarchy in TypeTokenView
Saam Barati
Reported
2014-09-21 00:45:35 PDT
Take the example program: ` var x = {} x = 2; ` The type token displayed next to x will be Object, but it should be many.
Attachments
proposed patch
(858 bytes, patch)
2014-09-21 00:51 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(2.90 KB, patch)
2014-09-21 13:49 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(4.92 KB, patch)
2014-09-21 21:08 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-09-21 00:45:43 PDT
<
rdar://problem/18405642
>
Saam Barati
Comment 2
2014-09-21 00:51:39 PDT
Created
attachment 238424
[details]
proposed patch I think this patch should fix the issue, but I'm waiting on a build to verify.
Saam Barati
Comment 3
2014-09-21 12:20:47 PDT
Argh, it seems like the problem is deeper than this too. TypeSet::inspectorTypeSet seems to be broken when being passed over the protocol. I'm looking into fixing this now.
Saam Barati
Comment 4
2014-09-21 13:49:22 PDT
Created
attachment 238433
[details]
patch This should fix the problem: I was using TypeSet::doesTypeConformTo which checks a bound on a type, it does NOT check whether a TypeSet has ever been a specific type, which is the behavior we want.
Saam Barati
Comment 5
2014-09-21 21:08:15 PDT
Created
attachment 238447
[details]
patch
Joseph Pecoraro
Comment 6
2014-09-21 22:04:14 PDT
Comment on
attachment 238447
[details]
patch Oops!!! My fault :O. Should have seen that in review. r=me
WebKit Commit Bot
Comment 7
2014-09-21 23:58:41 PDT
Comment on
attachment 238447
[details]
patch Clearing flags on attachment: 238447 Committed
r173805
: <
http://trac.webkit.org/changeset/173805
>
WebKit Commit Bot
Comment 8
2014-09-21 23:58:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug